[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/UI/GameOverBackground.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/text.fnt" type="BitmapFont" id=2]
[ext_resource path="res://src/ui/map/GameOver.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/small.fnt" type="BitmapFont" id=4]
[ext_resource path="res://src/helpers/AnimatedSprite.gd" type="Script" id=5]
[ext_resource path="res://assets/player/Sword.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/Banner.png" type="Texture" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 40, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 60, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 100, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 120, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 140, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="GameOver" type="Control"]
pause_mode = 2
margin_right = 208.0
margin_bottom = 156.0
rect_scale = Vector2( 2, 2 )
focus_mode = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_top = -12.0
margin_right = 96.0
margin_bottom = 116.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
margin_top = 8.0
margin_right = 44.0
margin_bottom = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Label" parent="Title"]
margin_left = 12.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Game"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Over" type="Label" parent="Title"]
margin_left = 45.0
margin_top = 17.0
margin_right = 85.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
text = "Over"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Title"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 53.0
margin_right = 81.0
margin_bottom = 97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="Options"]
margin_right = 66.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 11 )
keep_pressed_outside = true
text = "TRY AGAIN"
flat = true

[node name="Restart" type="Button" parent="Options"]
margin_top = 16.0
margin_right = 66.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 11 )
keep_pressed_outside = true
text = "RESTART"
flat = true

[node name="Exit" type="Button" parent="Options"]
margin_top = 32.0
margin_right = 66.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
custom_styles/focus = SubResource( 12 )
keep_pressed_outside = true
text = "EXIT"
flat = true

[node name="Cursor" type="AnimatedSprite" parent="."]
position = Vector2( 0, 64 )
frames = SubResource( 10 )
centered = false
script = ExtResource( 5 )

[connection signal="pressed" from="Options/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="Options/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Options/Exit" to="." method="_on_Exit_pressed"]
